# ChangeLog for www-client/chromium-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium-bin/ChangeLog,v 1.52 2010/01/13 12:17:35 voyageur Exp $

  13 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-4.0.266.0_p33995.ebuild,
  chromium-bin-4.0.295.0_p35884.ebuild, chromium-bin-9999.ebuild:
  Add xdg-utils to RDEPEND, spotted by Bailey Kong <bailey@tgpsolutions.com>
  in bug #300795

  11 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-4.0.295.0_p35884.ebuild:
  Sync deps with -9999 ebuild, as these new builds use more external
  libraries

*chromium-bin-4.0.295.0_p35884 (11 Jan 2010)

  11 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.251.0_p32167.ebuild,
  -chromium-bin-4.0.260.0_p33405.ebuild,
  +chromium-bin-4.0.295.0_p35884.ebuild:
  Bump, follows last tagged release as the snapshots do not match dev
  channel

  15 Dec 2009; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-9999.ebuild:
  Snapshots now use more system libraries, bug #296589

*chromium-bin-4.0.266.0_p33995 (08 Dec 2009)

  08 Dec 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.248.0_p32003.ebuild,
  +chromium-bin-4.0.266.0_p33995.ebuild:
  Version bump

  01 Dec 2009; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-4.0.260.0_p33405.ebuild, chromium-bin-9999.ebuild:
  Bump required nss version to 3.12.3

*chromium-bin-4.0.260.0_p33405 (01 Dec 2009)

  01 Dec 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.240.0_p31382.ebuild,
  +chromium-bin-4.0.260.0_p33405.ebuild:
  Version bump, enables bookmarks sync by default, allows again extensions
  to access file:// elements (adblock+)

  19 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-4.0.251.0_p32167.ebuild, chromium-bin-9999.ebuild:
  Change directory for nss/nspr symlinks (and make them absolute), bug
  #293595
