@@ -1,6 +1,10 @@
 # ChangeLog for www-client/chromium-bin
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium-bin/ChangeLog,v 1.52 2010/01/13 12:17:35 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium-bin/ChangeLog,v 1.53 2010/01/17 21:33:38 ssuominen Exp $
+
+  17 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
+  chromium-bin-4.0.295.0_p35884.ebuild, chromium-bin-9999.ebuild:
+  Replace jpeg-compat with slotted <jpeg-7.
 
   13 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
   chromium-bin-4.0.266.0_p33995.ebuild,
